Se agrega encabezado con logo y pie de pagina con enlace a reto

--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <title>Time Conversion</title>
 </head>
 <body>
+    <header>
+        <img src="./logo.png" alt="logo jump force" width="200px" style="position: center;">
+    </header>
     <main>
         <div>
             <h1>Time Conversion</h1>
@@ -20,6 +23,9 @@
             <script src="./script.js"></script>
         </div>
     </main>
+    <footer>
+        <a href="https://www.hackerrank.com/challenges/time-conversion/problem?isFullScreen=true">Reto Time Conversion de HackerRank</a>
+    </footer>
     <script src="./script.js"></script>
 </body>
 </html>
